# NetBricks

./: .gitignore  .travis.yml  Cargo.toml  README.md  \  ]  azure-pipelines.yml  build.sh  deny.toml  examples.sh  rustfmt.toml
.cargo/: config
.github/: dependabot.yml
build-container/: Dockerfile
ci/: cargo-doc.yml  deploy-doc.yml
container/: Dockerfile
framework/: Cargo.toml  build.rs
framework/src/: lib.rs
framework/src/allocators/: cache_aligned.rs  mod.rs
framework/src/common/: errors.rs  mod.rs
framework/src/config/: config_reader.rs  flag_reader.rs  mod.rs
framework/src/control/: mod.rs  sctp.rs  tcp.rs
framework/src/control/linux/: epoll.rs
framework/src/headers/: ip.rs  mac.rs  mod.rs  null_header.rs  tcp.rs  udp.rs
framework/src/interface/: dpdk.rs  mod.rs  packet.rs
framework/src/interface/port/: mod.rs  phy_port.rs  virt_port.rs
framework/src/measure/: mod.rs
framework/src/native/: libnuma.rs
framework/src/native/zcsi/: mbuf.rs  zcsi.rs
framework/src/operators/: act.rs  add_metadata.rs  add_metadata_mut.rs  composition_batch.rs  deparsed_batch.rs  filter_batch.rs  group_by.rs  iterator.rs  macros.rs  map_batch.rs  merge_batch.rs  mod.rs  packet_batch.rs  parsed_batch.rs  receive_batch.rs  reset_parse.rs  restore_header.rs  send_batch.rs  transform_batch.rs
framework/src/pvn/: measure.rs  mod.rs  p2p.rs  rdr.rs  unresolvable.rs  xcdr.rs
framework/src/queues/: mod.rs  mpsc_mbuf_queue.rs
framework/src/scheduler/: context.rs  embedded_scheduler.rs  mod.rs  standalone_scheduler.rs
framework/src/shared_state/: directory.rs  mod.rs  shared_vec.rs
framework/src/state/: cp_mergeable.rs  dp_mergeable.rs  mergeable.rs  mod.rs  ring_buffer.rs
framework/src/state/reordered_buffer/: mod.rs  reordered_buffer.rs
framework/src/utils/: asm.rs  flow.rs  mod.rs
native/: Makefile
native/test/: Makefile
pvnf/p2p/: Cargo.toml
pvnf/p2p-groupby/: Cargo.toml
pvnf/p2p-transform/: .env  Cargo.toml
pvnf/p2p/src/: lib.rs  nf.rs  utils.rs
pvnf/rdr/: Cargo.toml
pvnf/rdr-groupby/: Cargo.toml  full.sh
pvnf/rdr-transform/: Cargo.toml  full.sh
pvnf/rdr/src/: lib.rs  nf.rs  utils.rs
pvnf/tlsv/: Cargo.toml
pvnf/tlsv-groupby/: Cargo.toml
pvnf/tlsv-transform/: Cargo.toml
pvnf/tlsv/src/: lib.rs  nf.rs  utils.rs
pvnf/xcdr/: Cargo.toml
pvnf/xcdr-groupby/: Cargo.toml
pvnf/xcdr-transform/: Cargo.toml
pvnf/xcdr/src/: lib.rs  utils.rs
scripts/: bind-xl710-opt.sh  bind-xl710.sh  init.sh  opt-bind-xl710.sh  run-delay.sh  start-ovs-chain.sh
scripts/tuning/: read_cpu_dma_latency.py
test/acl-fw/: Cargo.toml  run.sh
test/adv-acl/: Cargo.toml  run.sh
test/app-p2p_g/: Cargo.toml  run.sh
test/app-p2p_t/: Cargo.toml  full.sh  run.sh
test/app-p2p_t/src/: main.rs  nf.rs  utils.rs
test/app-rdr_g/: Cargo.toml  profile.sh  run.sh
test/app-rdr_t/: Cargo.toml  dbg.sh  full.sh
test/app-rdr_t/src/: main.rs  nf.rs  unresolvable.rs  utils.rs
test/app-tlsv_g/: Cargo.toml
test/app-tlsv_t/: Cargo.toml  profile.sh  run.sh
test/app-tlsv_t/src/: main.rs  nf.rs  utils.rs
test/app-xcdr_g/: Cargo.toml
test/app-xcdr_t/: .gitignore  Cargo.toml  run.sh
test/app-xcdr_t/src/: main.rs  nf.rs  utils.rs
test/chain-rdr-p2p_g/: Cargo.toml
test/chain-rdr-p2p_g/src/: main.rs
test/chain-rdr-p2p_t/: Cargo.toml
test/chain-rdr-p2p_t/src/: main.rs
test/chain-rdr-tlsv_g/: Cargo.toml
test/chain-rdr-tlsv_t/: Cargo.toml  run.sh
test/chain-rdr-tlsv_t/src/: main.rs
test/chain-rdr-xcdr_g/: Cargo.toml
test/chain-rdr-xcdr_t/: Cargo.toml
test/chain-rdr-xcdr_t/src/: main.rs
test/chain-test/: Cargo.toml  README.md  conf_run.sh  config.toml  run.sh
test/chain-tlsv-p2p_g/: Cargo.toml
test/chain-tlsv-p2p_t/: Cargo.toml
test/chain-tlsv-p2p_t/src/: main.rs
test/chain-tlsv-xcdr_g/: Cargo.toml
test/chain-tlsv-xcdr_t/: Cargo.toml
test/chain-xcdr-p2p_g/: Cargo.toml
test/chain-xcdr-p2p_t/: Cargo.toml
test/co-rdr-p2p/: Cargo.toml
test/co-rdr-p2p/src/: main.rs  nf.rs
test/co-rdr-tlsv/: Cargo.toml
test/co-rdr-tlsv/src/: main.rs  nf.rs
test/co-rdr-xcdr/: Cargo.toml
test/co-rdr-xcdr-p2p/: Cargo.toml
test/co-rdr-xcdr-p2p/src/: main.rs  nf.rs
test/co-rdr-xcdr/src/: main.rs  nf.rs
test/co-tlsv-p2p/: .gitignore  Cargo.toml
test/co-tlsv-p2p-xcdr/: Cargo.toml
test/co-tlsv-p2p-xcdr/src/: main.rs  nf.rs
test/co-tlsv-p2p/src/: main.rs  nf.rs
test/co-tlsv-rdr/: Cargo.toml
test/co-tlsv-rdr-p2p/: Cargo.toml
test/co-tlsv-rdr-p2p-xcdr/: Cargo.toml
test/co-tlsv-rdr-p2p-xcdr/src/: main.rs  nf.rs
test/co-tlsv-rdr-p2p/src/: main.rs  nf.rs
test/co-tlsv-rdr-xcdr/: Cargo.toml
test/co-tlsv-rdr-xcdr/src/: main.rs  nf.rs
test/co-tlsv-rdr/src/: main.rs  nf.rs
test/co-tlsv-xcdr/: Cargo.toml
test/co-tlsv-xcdr/src/: main.rs  nf.rs
test/co-xcdr-p2p/: Cargo.toml
test/co-xcdr-p2p/src/: main.rs  nf.rs
test/compression-proxy/: Cargo.toml  test
test/compression-proxy/src/: main.rs  nf.rs  utils.rs
test/config-test/: Cargo.toml
test/delay-test/: Cargo.toml
test/embedded-scheduler-dependency-test/: Cargo.toml
test/embedded-scheduler-test/: Cargo.toml
test/framework-test/: Cargo.toml  check.sh
test/job_scheduler/: Cargo.toml  run.sh
test/lpm/: Cargo.toml  my_output  run.sh  track.sh
test/lpm-embedded/: Cargo.toml
test/lpm-test/: Cargo.toml  check.sh  run.sh
test/macswap/: Cargo.toml  run.sh
test/maglev/: Cargo.toml  output.out  run.sh  run_full.sh  trace.out  trace.sh
test/nat/: Cargo.toml  run.sh  run_full.sh
test/p2p-filter/: Cargo.toml  result_p2p_trace.out  result_rdr_trace.out  run_full.sh
test/p2p-filter/src/: main.rs  nf.rs
test/p2p-groupby/: Cargo.toml  profile.sh  run.sh
test/p2p-groupby-app/: Cargo.toml  run_full.sh  trace.out  workload.json
test/p2p-groupby-app/src/: main.rs  nf.rs  utils.rs
test/p2p-groupby-app/workloads/: 100_workload.json  pruned-p2p-workload.json
test/p2p-nat/: Cargo.toml  output.out  run.sh  trace.sh  (+1 more)
test/p2p-nat-2/: Cargo.toml  run.sh  trace.out
test/p2p-nat-filter/: Cargo.toml  run.sh  trace.sh
test/p2p-nat-groupby/: .gitignore  Cargo.toml
(+493 files in other folders)
