[workspace]
members=["framework",
        "test/framework-test",
        "test/delay-test",
        "test/macswap",
        "test/shutdown-test",
        "test/lpm-embedded",
        "test/nat",
        "test/packet_generation",
        "test/packet_test",
        "test/tcp_payload",
        "test/sctp-test",
        # "test/embedded-scheduler-dependency-test",
        # "test/embedded-scheduler-test",
        "test/config-test",
        "test/reset-parse",
        # ZCSI examples
        "test/tcp-reconstruction",
        "test/lpm",
        "test/lpm-test",
        "test/maglev",
        "test/tcp-check",
        "test/chain-test",
        "test/acl-fw",
        # PVN examples (in application format)
        "test/app-tlsv_g",
		"test/app-tlsv_t",
        "test/app-rdr_g",
		"test/app-rdr_t",
        "test/app-p2p_g",
		"test/app-p2p_t",
		"test/app-xcdr_g",
		"test/app-xcdr_t",
        # PVN examples (for latency measurement)
        "test/tls-validator-groupby",
		"test/tls-validator-transform",
        "test/rdr-groupby",
        "test/rdr-transform",
        "test/transcoder-groupby",
        "test/transcoder-transform",
        "test/p2p-groupby",
        "test/p2p-transform",
        ]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true    # for profiling
debug-assertions = false

