[workspace]
members=["framework",
        "test/framework-test",
        "test/delay-test",
        "test/macswap",
        "test/shutdown-test",
        "test/lpm-embedded",
        "test/nat",
        "test/packet_generation",
        "test/packet_test",
        "test/tcp_payload",
        "test/sctp-test",
        # "test/embedded-scheduler-dependency-test",
        # "test/embedded-scheduler-test",
        "test/config-test",
        "test/reset-parse",
        # ZCSI examples
        "test/tcp-reconstruction",
        "test/lpm",
        "test/lpm-test",
        "test/maglev",
        "test/tcp-check",
        "test/chain-test",
        "test/acl-fw",
        # PVN application
        "test/app-tlsv_g",
		"test/app-tlsv_t",
        "test/app-rdr_g",
		"test/app-rdr_t",
        "test/app-p2p_g",
		"test/app-p2p_t",
		"test/app-xcdr_g",
		"test/app-xcdr_t",
        # PVN NF libraries
		"pvnf/tlsv",
		"pvnf/rdr",
		"pvnf/xcdr",
		"pvnf/p2p",
		## old libs
		"pvnf/tlsv-groupby",
		"pvnf/tlsv-transform",
		"pvnf/rdr-groupby",
		"pvnf/rdr-transform",
		"pvnf/xcdr-groupby",
		"pvnf/xcdr-transform",
		"pvnf/p2p-groupby",
		"pvnf/p2p-transform",
		# PVN chain
		# "test/co-rdr-tlsv",
		"test/co-rdr-p2p",
		# "test/co-rdr-xcdr",
		# "test/co-tlsv-p2p",
		# "test/co-tlsv-xcdr",
		# "test/co-xcdr-p2p",
		## old chains
		"test/chain-rdr-tlsv_g",
		"test/chain-rdr-tlsv_t",
		"test/chain-rdr-p2p_g",
		"test/chain-rdr-p2p_t",
		"test/chain-rdr-xcdr_g",
		"test/chain-rdr-xcdr_t",
		"test/chain-tlsv-p2p_g",
		"test/chain-tlsv-p2p_t",
		"test/chain-tlsv-xcdr_g",
		"test/chain-tlsv-xcdr_t",
		"test/chain-xcdr-p2p_g",
		"test/chain-xcdr-p2p_t",
        ]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true    # for profiling
debug-assertions = false
