[workspace]
members=["framework",
        # "test/framework-test",
        # "test/delay-test",
        # "test/macswap",
        # "test/shutdown-test",
        # "test/lpm-embedded",
        "test/nat",
        # "test/packet_generation",
        # "test/packet_test",
        # "test/tcp_payload",
        # "test/sctp-test",
        # "test/embedded-scheduler-dependency-test",
        # "test/embedded-scheduler-test",
        # "test/config-test",
        # "test/reset-parse",
        # ZCSI examples
        # "test/tcp-reconstruction",
        "test/lpm",
        # "test/lpm-test",
        "test/maglev",
        # "test/tcp-check",
        "test/chain-test",
        "test/acl-fw",
        # PVN application
        # "test/app-tlsv_g",
		"test/app-tlsv_t",
        # "test/app-rdr_g",
		"test/app-rdr_t",
        # "test/app-p2p_g",
		"test/app-p2p_t",
		# "test/app-xcdr_g",
		"test/app-xcdr_t",
        # PVN NF libraries
		"pvnf/tlsv",
		"pvnf/rdr",
		"pvnf/xcdr",
		"pvnf/p2p",
		# PVN chain
		# "test/co-tlsv-rdr",
		# "test/co-rdr-p2p",
		# "test/co-rdr-xcdr",
		"test/co-tlsv-p2p",
		# "test/co-tlsv-xcdr",
		# "test/co-xcdr-p2p",
        ]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true    # for profiling
debug-assertions = false
