[package]
name = "e2d2"
version = "0.2.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]
build = "build.rs"
edition = "2018"
license = "ISC"

[lib]
doctest = false

[dependencies]
libc = ">= 0.2.4"
byteorder = "*"
fnv = "*"
twox-hash = "*"
regex = "*"
lazy_static = "*"
net2 = "*"
getopts = "*"
# NIX restricts us to just unix for now, we can fix this if someone cares at a later point.
nix = "*"
# Figure out if we want this permanently or just for now.
rust-sctp = { git="https://github.com/netsys/rust-sctp", optional = true}
toml = "*"
# Hack for SHM
error-chain = "*"
clippy = { version = "*", optional = true }
statrs = "0.13"
serde_json = "*"

[features]
default = []
performance = []
dev = ["clippy"]
packet_offset = []
sctp = ["rust-sctp"]

[build-dependencies]
# Use Bindgen to generate DPDK structures.
bindgen = "0.56"
