[package]
name = "p2p"
version = "0.2.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.1.42"
getopts = "*"
rand = "0.6.5"
fnv = "*"
twox-hash = "*"
log = "0.4"
failure = "*"
tiny_http = "0.6"
rshttp = { git = "https://github.com/jethrosun/http", branch = "pvn" }
rustc-serialize = "*"
serde_json = "*"
sha1 = "0.2.0"
hyper = "0.10"
core_affinity = "0.5.10"
crossbeam = "0.7.3"
"transmission-rpc" = "0.2.3"
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3"
fork = "0.1.17"

[features]
default = []
print = []
