[package]
name = "p2p"
version = "0.2.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.2.23"
failure = "*"
tiny_http = "0.7"
rshttp = { git = "https://github.com/jethrosun/http", branch = "pvn" }
rustc-serialize = "*"
serde_json = "*"
sha1 = "0.6.0"
hyper = "0.13"
crossbeam = "0.8.0"
transmission-rpc = "0.2.3"
# NOTE: upgrading to 0.3 will break the compilation
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3"

[features]
default = []
print = []
