[package]
name = "p2p"
version = "0.2.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "=0.2"
failure = "=0.1.8"
tiny_http = "=0.7"
rshttp = { git = "https://github.com/jethrosun/http", branch = "pvn" }
rustc-serialize = "=0.3.24"
serde_json = "=1.0.64"
sha1 = "=0.6.0"
crossbeam = "=0.8.0"
transmission-rpc = "=0.2.3"
tokio = { version = "=1.0", features = ["full"] }
dotenv = "=0.15.0"
futures = "=0.3"

[features]
default = []
print = []
