[package]
name = "tlsv"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu']

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.2"
rand = "0.8.0"
fnv = "*"
twox-hash = "*"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21.0"
webpki-roots = "0.21.0"
log = "0.4"

[features]
default = []
print = []
