[package]
name = "xcdr"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.2"
rand = "0.8.0"
failure = "*"
rustc-serialize = "*"
serde_json = "*"
y4m = "0.7"
resize = "0.5"
crossbeam = "0.8.0"
faktory = "0.11"

[features]
default = []
print = []
