[package]
name = "xcdr"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "=0.2"
failure = "=0.1.8"
serde_json = "=1.0.64"
rustc-serialize = "=0.3.24"
rand = "=0.8.0"
y4m = "=0.7"
resize = "=0.5"
crossbeam = "=0.8.0"
faktory = "=0.11"

[features]
default = []
print = []
