[package]
name = "pvn-p2p-transform-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.1.42"
getopts = "*"
rand = ">=0.3"
fnv = "*"
rustc-serialize = "*"
serde_json = "*"
core_affinity = "0.5.10"
crossbeam = "0.7.3"
"transmission-rpc" = "0.2.3"
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3"
shell-words = "1.0.0"

[features]
default = []
print = []
