[package]
name = "pvn-rdr-transform-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
rdr = { path = "../../pvnf/rdr" }

time = "0.2.23"
getopts = "*"
fnv = "*"
twox-hash = "*"
log = "0.4"
failure = "*"
tiny_http = "0.7"
rshttp = { git = "https://github.com/jethrosun/http", branch = "pvn" }
headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
# headless_chrome = "0.9"
rustc-serialize = "*"
serde = "1.0"
serde_json = "1.0"

[features]
default = []
print = []
