[package]
name = "pvn-rdr-transform-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
rdr = { path = "../../pvnf/rdr" }
time = "=0.2"
failure = "=0.1.8"
serde_json = "=1.0.64"
rustc-serialize = "=0.3.24"
rand = "=0.8.0"
fnv = "=1.0.7"
twox-hash = "=1.6.0"
log = "=0.4.4"
tiny_http = "=0.7"
rshttp = { git = "https://github.com/jethrosun/http", branch = "pvn" }
headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
# headless_chrome = "0.9"

[features]
default = []
print = []
