[package]
name = "pvn-tlsv-transform-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu']

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv = { path = "../../pvnf/tlsv" }

time = "0.1.42"
getopts = "*"
rand = "0.6.0"
fnv = "*"
twox-hash = "*"
# rustls = { git = "https://github.com/jethrosun/rustls", branch = "pvn-0.15.2", features = ["dangerous_configuration"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "*"
webpki-roots = "*"
log = "0.4"

[features]
default = []
print = []
