[package]
name = "pvn-tlsv-transform-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu']

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv = { path = "../../pvnf/tlsv" }
time = "=0.2"
fnv = "=1.0.7"
log = "=0.4"
rustls = { git = "https://github.com/jethrosun/rustls", branch = "pvn-0.16" }
webpki = "=0.21.0"
webpki-roots = "=0.18.0"

[features]
default = []
print = []
