[package]
name = "pvn-transcoder-transform-app"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
xcdr = { path = "../../pvnf/xcdr" }

time = "0.1.42"
getopts = "*"
rand = "0.6.5"
fnv = "*"
twox-hash = "*"
failure = "*"
rustc-serialize = "*"
serde_json = "*"
y4m = "0.5"
resize = "0.3"
crossbeam = "0.7.3"
faktory = "0.11"

[features]
default = []
print = []
