[package]
name = "pvn-rdr-p2p-groupby-chain"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
rdr-groupby = { path = "../../pvnf/rdr-groupby" }
p2p-groupby = { path = "../../pvnf/p2p-groupby" }
time = "0.2.22"

[features]
default = []
print = []
