[package]
name = "pvn-rdr-xcdr-transform-chain"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
rdr-transform = { path = "../../pvnf/rdr-transform" }
xcdr-transform = { path = "../../pvnf/xcdr-transform" }
time = "0.2.22"

[features]
default = []
print = []
