[package]
name = "pvn-tlsv-p2p-transform-chain"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv-transform = { path = "../../pvnf/tlsv-transform" }
p2p-transform = { path = "../../pvnf/p2p-transform" }
time = "0.2.22"

[features]
default = []
print = []
