[package]
name = "pvn-rdr-xcdr-coexist-app"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
rdr-groupby = { path = "../../pvnf/rdr-groupby" }
xcdr-groupby = { path = "../../pvnf/xcdr-groupby" }
time = "0.2.22"

[features]
default = []
print = []
