[package]
name = "pvn-tlsv-p2p-xcdr-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.2.22"
tlsv = { path = "../../pvnf/tlsv" }
webpki = "0.21"
webpki-roots = "0.21"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
p2p = { path = "../../pvnf/p2p" }
tokio = { version = "0.2", features = ["macros"] }
xcdr = { path = "../../pvnf/xcdr" }
faktory = "0.11"

[features]
default = []
print = []
