[package]
name = "pvn-tlsv-p2p-xcdr-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "=0.2"
tlsv = { path = "../../pvnf/tlsv" }
rustls = { git = "https://github.com/jethrosun/rustls", branch = "pvn-0.16" }
webpki = "=0.21.0"
webpki-roots = "=0.18.0"
p2p = { path = "../../pvnf/p2p" }
tokio = { version = "=1.0", features = ["macros"] }
xcdr = { path = "../../pvnf/xcdr" }
faktory = "=0.11"

[features]
default = []
print = []
