[package]
name = "pvn-tlsv-p2p-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv = { path = "../../pvnf/tlsv" }
p2p = { path = "../../pvnf/p2p" }
time = "0.2"
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "*"
webpki-roots = "*"

[features]
default = []
print = []
