[package]
name = "pvn-tlsv-rdr-p2p-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.2.22"
tlsv = { path = "../../pvnf/tlsv" }
webpki = "0.21"
webpki-roots = "0.21"
rustls = { version = "0.17", features = ["dangerous_configuration"] }
rdr = { path = "../../pvnf/rdr" }
headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
p2p = { path = "../../pvnf/p2p" }
tokio = { version = "0.2", features = ["macros"] }

[features]
default = []
print = []
