[package]
name = "pvn-tlsv-rdr-xcdr-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "=0.2"
tlsv = { path = "../../pvnf/tlsv" }
rustls = { git = "https://github.com/jethrosun/rustls", branch = "pvn-0.16", features = ["dangerous_configuration"] }
webpki = "=0.21.0"
webpki-roots = "=0.18.0"
rdr = { path = "../../pvnf/rdr" }
headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
xcdr = { path = "../../pvnf/xcdr" }
faktory = "=0.11"

[features]
default = []
print = []
