[package]
name = "pvn-tlsv-rdr-coexist-app"
version = "0.2.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv = { path = "../../pvnf/tlsv" }
rdr = { path = "../../pvnf/rdr" }
headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
time = "0.2"

[features]
default = []
print = []
