[package]
name = "pvn-tlsv-xcdr-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv = { path = "../../pvnf/tlsv" }
xcdr = { path = "../../pvnf/xcdr" }
time = "0.2.22"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
webpki = "*"
webpki-roots = "*"
faktory = "0.11"

[features]
default = []
print = []
