[package]
name = "pvn-tlsv-xcdr-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
tlsv = { path = "../../pvnf/tlsv" }
xcdr = { path = "../../pvnf/xcdr" }
time = "=0.2"
rustls = { git = "https://github.com/jethrosun/rustls", branch = "pvn-0.16" }
webpki = "=0.21.0"
webpki-roots = "=0.18.0"
faktory = "=0.11"

[features]
default = []
print = []
