[package]
name = "pvn-xcdr-p2p-coexist-app"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
xcdr = { path = "../../pvnf/xcdr" }
p2p = { path = "../../pvnf/p2p" }
time = "0.2"
tokio = { version = "0.2", features = ["macros"] }
faktory = "0.11"

[features]
default = []
print = []
