[package]
name = "pvn-compression"
version = "0.1.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu>']

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.6.0"
fnv = "*"
twox-hash = "*"
rustls = { git = "https://github.com/jethrosun/rustls", branch = "pvn-0.15.2", features = ["dangerous_configuration"] }
webpki = "0.19"
webpki-roots = "*"
headless_chrome = "0.9"
log = "0.4"
slog = "2.5"
slog-term = "2.4"
slog-stdlog = "3.0"
slog-scope = "4.1"

[features]
default = []
print = []
