[package]
name = "pvn-p2p-filter"
version = "0.2.0"
authors = ['Shuwen "Jethro" Sun <jethrosun@ccs.neu.edu']
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = ">=0.3"
fnv = "*"
libevent-sys = { git = "https://github.com/jethrosun/libevent-sys", branch = "pvn" }
transmission = { git = "https://github.com/jethrosun/transmission-rs", branch = "pvn" }
rustc-serialize = "*"
serde_json = "*"



[features]
default = []
print = []
