[package]
name = "pvn-p2p-groupby-app"
version = "0.2.0"
authors = ["Shuwen Jethro Sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "0.1.42"
getopts = "*"
rand = "0.6.5"
fnv = "*"
twox-hash = "*"
log = "0.4"
failure = "*"
tiny_http = "0.6"
rshttp = { git = "https://github.com/jethrosun/http", branch = "pvn" }
headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn" }
rustc-serialize = "*"
serde_json = "*"
sha1 = "0.2.0"
hyper = "0.10"
libevent-sys = { git = "https://github.com/jethrosun/libevent-sys", branch = "pvn" }
transmission = { git = "https://github.com/jethrosun/transmission-rs", branch = "pvn" }

[features]
default = []
print = []
